--- a/src/components/pages/HomePage/AppTitle/AppTitle.scss
+++ b/src/components/pages/HomePage/AppTitle/AppTitle.scss
@@ -8,11 +8,12 @@
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     padding-left: 45px;
     background: linear-gradient(
-                    45deg,
-                    rgba(0, 0, 0, 0) 0%,
-                    rgba(36, 121, 64, 1) 50%,
-                    rgba(18, 18, 18, 1) 100%
-    ) center center/cover no-repeat;
+            45deg,
+            rgba(0, 0, 0, 0) 0%,
+            rgba(36, 121, 64, 1) 50%,
+            rgba(18, 18, 18, 1) 100%
+        )
+        center center/cover no-repeat;
 
     @media (max-width: 1168px) {
         padding-left: 0;
@@ -24,7 +25,6 @@
     @media (max-width: 768px) {
         margin-bottom: 32px;
     }
-
 
     .app-title__about {
         display: flex;
@@ -53,6 +53,10 @@
             margin-bottom: 12px;
             line-height: 22px;
             font-size: fonts.$font-size_15;
+        }
+
+        @media (max-width: 430px) {
+            font-size: fonts.$font-size_13;
         }
     }
 
@@ -104,6 +108,10 @@
         @media (max-width: 590px) {
             font-size: fonts.$font-size_33;
         }
+
+        @media (max-width: 430px) {
+            font-size: fonts.$font-size_28;
+        }
     }
 
     .about__sub-title {
@@ -128,6 +136,10 @@
 
         @media (max-width: 590px) {
             font-size: fonts.$font-size_30;
+        }
+
+        @media (max-width: 430px) {
+            font-size: fonts.$font-size_24;
         }
     }
 }
