--- a/src/constants/styles/colors.scss
+++ b/src/constants/styles/colors.scss
@@ -16,3 +16,5 @@ $currency_card_border: #474747;
 $currency_card_background: #202025;
 $currency-card_background__light: #649e6754;
 $footer-links__border-color: #607d94;
+$currency-input__black-background: #a6a9ae;
+$currency-input__light-background: #8bca77;
