--- a/src/components/pages/HomePage/Header/Header.scss
+++ b/src/components/pages/HomePage/Header/Header.scss
@@ -2,101 +2,134 @@
 @use "../../../../constants/styles/colors" as colors;
 
 .header__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  height: 103px;
-  margin: 0px auto;
-
-  .header__logo {
-    @media (max-width: 712px) {
-      width: 20px;
-      height: 20px;
-    }
-
-    @media (max-width: 420px) {
-      width: 10px;
-      height: 10px;
-    }
-  }
-
-  .header__navigation {
-    min-width: 52%;
     display: flex;
-    justify-content: space-around;
-    column-gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 103px;
+    margin: 0px auto;
 
-    @media (max-width: 768px) {
-      justify-content: normal;
-      column-gap: 20px;
+    .header__logo {
+        @media (max-width: 712px) {
+            width: 20px;
+            height: 20px;
+        }
+
+        @media (max-width: 500px) {
+            width: 15px;
+            height: 15px;
+        }
     }
 
-    .navigation-list__item {
-      @include fonts.PoppinsLight;
-      color: colors.$color_white;
-      font-size: fonts.$font-size_20;
-      white-space: nowrap;
+    .header__navigation {
+        min-width: 52%;
+        display: flex;
+        justify-content: space-around;
+        column-gap: 20px;
 
-      &:hover {
-        border-bottom: 1px solid colors.$color_grey;
-      }
+        @media (max-width: 768px) {
+            justify-content: normal;
+        }
 
-      @media (max-width: 860px) {
-        font-size: fonts.$font-size_15;
-      }
+        @media (max-width: 500px) {
+            justify-content: normal;
+            column-gap: 18px;
+        }
 
-      @media (max-width: 430px) {
-        font-size: fonts.$font-size_10;
-      }
+        @media (max-width: 430px) {
+            font-size: fonts.$font-size_10;
+        }
+
+        @media (max-width: 350px) {
+            column-gap: 10px;
+            flex-wrap: wrap;
+        }
+
+        @media (max-width: 320px) {
+            column-gap: 5px;
+            flex-wrap: wrap;
+        }
+
+        .navigation-list__item {
+            @include fonts.PoppinsLight;
+            color: colors.$color_white;
+            font-size: fonts.$font-size_20;
+            white-space: nowrap;
+
+            &:hover {
+                border-bottom: 1px solid colors.$color_grey;
+                opacity: 0.7;
+                transform: scale(1.05);
+            }
+
+            &:active {
+                opacity: 0.7;
+                transform: scale(1.05);
+            }
+
+            &:visited {
+                opacity: 0.7;
+                transform: scale(1.05);
+                border-bottom: 1px solid colors.$color_grey;
+            }
+
+            @media (max-width: 860px) {
+                font-size: fonts.$font-size_15;
+            }
+
+            @media (max-width: 430px) {
+                font-size: fonts.$font-size_10;
+            }
+        }
+
+        .navigation-list__item__active {
+            @include fonts.PoppinsLight;
+            color: colors.$color_green;
+            font-size: fonts.$font-size_20;
+            white-space: nowrap;
+            border-bottom: 1px solid colors.$color_green;
+
+            @media (max-width: 860px) {
+                font-size: fonts.$font-size_15;
+            }
+
+            @media (max-width: 860px) {
+                font-size: fonts.$font-size_15;
+            }
+
+            @media (max-width: 430px) {
+                font-size: fonts.$font-size_10;
+            }
+        }
     }
 
-    .navigation-list__item__active {
-      @include fonts.PoppinsLight;
-      color: colors.$color_green;
-      font-size: fonts.$font-size_20;
-      white-space: nowrap;
-      border-bottom: 1px solid colors.$color_green;
+    &.light {
+        .navigation-list__item {
+            color: colors.$black_background;
+        }
 
+        .navigation-list__item:hover {
+            border-bottom: 1px solid colors.$black_background;
+        }
 
-      @media (max-width: 860px) {
-        font-size: fonts.$font-size_15;
-      }
-
-      @media (max-width: 430px) {
-        font-size: fonts.$font-size_10;
-      }
+        .navigation-list__item:visited {
+            border-bottom: 1px solid colors.$black_background;
+        }
     }
-  }
-
-  &.light {
-    .navigation-list__item {
-      color: colors.$black_background;
-    }
-
-    .navigation-list__item:hover {
-      border-bottom: 1px solid colors.$black_background;
-    }
-
-    .navigation-list__item:visited {
-      border-bottom: 1px solid colors.$black_background;
-    }
-  }
 }
 
-
 .theme-button {
-  background: transparent;
-  border: 1px solid colors.$color_white;
-  width: 50px;
-  height: 30px;
-  border-radius: 30%;
-
-  .theme-button__button {
     background: transparent;
     border: 1px solid colors.$color_white;
-    width: 30px;
+    width: 50px;
     height: 30px;
-    border-radius: 50%;
-  }
+    border-radius: 30%;
+
+    .theme-button__button {
+        background: transparent;
+        border: 1px solid colors.$color_white;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+    }
 }
