--- a/src/constants/styles/colors.scss
+++ b/src/constants/styles/colors.scss
@@ -18,3 +18,4 @@ $currency-card_background__light: #649e6754;
 $footer-links__border-color: #607d94;
 $currency-input__black-background: #a6a9ae;
 $currency-input__light-background: #8bca77;
+$chart-input__error-message: #f67575;
