--- a/src/constants/styles/colors.scss
+++ b/src/constants/styles/colors.scss
@@ -19,3 +19,6 @@ $footer-links__border-color: #607d94;
 $currency-input__black-background: #a6a9ae;
 $currency-input__light-background: #8bca77;
 $chart-input__error-message: #f67575;
+$burger-menu__blur: rgba(85, 85, 85, 0.431372549);
+$burger-menu__light-backround: #e1d8d8;
+$burger-menu__black-backround: #4c4a4a;
