--- a/src/components/pages/TimelinePage/CustomToast/CustomToast.scss
+++ b/src/components/pages/TimelinePage/CustomToast/CustomToast.scss
@@ -13,6 +13,7 @@
     background: #00bc4f;
     overflow: hidden;
     text-align: center;
+    z-index: -1;
 
     .toast-content {
         @include fonts.PoppinsLight;
@@ -26,5 +27,6 @@
 
     &.show {
         opacity: 1;
+        z-index: 1;
     }
 }
